@@ -1,3 +1,6 @@
+2017/01/12 v166
+	1. Update for the rogue's 10-max combo points.
+
 2017/01/10 v165
 	1. The label on nameplates will display a '+' for elite(yellow color), rare(white color), elite-rare(aqua color), boss(red color).
 
